--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -90,7 +90,7 @@
       .mouse__cursor.style6 {
         background-color: rgba(95, 243, 139, 0.4);
         border-color: rgb(95, 243, 139);
-        transform: scale(5);
+        transform: scale(5) rotateX(545deg);
         border-radius: 0;
       }
 
