--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -11,35 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
     <style>
       /* parallax__nav */
-            #parallax__nav {
+  #parallax__nav {
                 position: fixed;
                 right: 20px;
                 top: 20px;
-                z-index: 3000;
+                z-index: 2000;
                 background-color: rgba(0, 0, 0, 0.4);
-                padding: 20px 20px;
+                padding: 20px 35px;
                 border-radius: 50px;
             }
 
-            #parallax__nav ul li {
+            #parallax__nav li {
                 display: inline;
-                margin: 0 px;
+                margin: 0 5px;
             }
 
-            #parallax__nav ul li a {
+            #parallax__nav li a {
                 display: inline-block;
                 height: 30px;
                 line-height: 30px;
-                padding: 5px 50px;
+                padding: 5px 20px;
                 text-align: center;
             }
 
-            #parallax__nav ul li.active a {
+            #parallax__nav li.active a {
                 background: #fff;
                 color: #000;
                 border-radius: 20px;
                 box-sizing: content-box;
-               
             }
 
             #parallax__cont {
