--- a/javascript/effect/parallaxEffect02.html
+++ b/javascript/effect/parallaxEffect02.html
@@ -30,25 +30,87 @@
         top: 20px;
         z-index: 2000;
         background-color: rgba(0, 0, 0, 0.4);
-        padding: 20px 30px;
+        padding: 20px 35px;
         border-radius: 50px;
       }
+
       #parallax__nav li {
         display: inline;
         margin: 0 5px;
       }
+
       #parallax__nav li a {
         display: inline-block;
         height: 30px;
+        line-height: 30px;
         padding: 5px 20px;
         text-align: center;
-        line-height: 30px;
       }
+
       #parallax__nav li.active a {
         background: #fff;
         color: #000;
         border-radius: 20px;
         box-sizing: content-box;
+      }
+      #parallax__dot {
+        position: fixed;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 10000;
+        background: rgba(0, 0, 0, 0.4);
+        padding: 20px 10px;
+        border-radius: 30px;
+      }
+
+      #parallax__dot span {
+        display: none;
+      }
+
+      #parallax__dot li {
+        position: relative;
+        width: 20px;
+        height: 20px;
+        margin: 12px 8px;
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
+        transition: box-shadow 0.2s ease;
+      }
+
+      #parallax__dot li a {
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        border-radius: 50%;
+        transition: transform 0.2s ease;
+      }
+
+      #parallax__dot li.active {
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 1);
+      }
+
+      #parallax__dot li.active a {
+        transform: scale(0.4);
+      }
+
+      /* info */
+      .paraScroll {
+        position: fixed;
+        left: 20px;
+        bottom: 20px;
+        z-index: 1000;
+        background: rgba(0, 0, 0, 0.4);
+        color: #fff;
+        height: 40px;
+        line-height: 40px;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 12px;
+        padding: 0px 20px;
       }
       #parallax__cont {
         max-width: 1600px;
@@ -213,10 +275,10 @@
   <body>
     <header id="header">
       <h1>Javascript Parallax Effect01</h1>
-      <p>패럴랙스 이펙트 - 메뉴 이동</p>
+      <p>패럴랙스 이펙트 - 닷 메뉴</p>
       <ul>
-        <li class="active"><a href="parallaxEffect01.html">1</a></li>
-        <li><a href="parallaxEffect02.html">2</a></li>
+        <li><a href="parallaxEffect01.html">1</a></li>
+        <li class="active"><a href="parallaxEffect02.html">2</a></li>
         <li><a href="parallaxEffect03.html">3</a></li>
         <li><a href="parallaxEffect04.html">4</a></li>
         <li><a href="parallaxEffect05.html">5</a></li>
@@ -226,17 +288,35 @@
     </header>
     <!-- //header -->
 
-    <nav id="parallax__nav">
+    <nav id="parallax__dot">
       <ul>
-        <li class="active"><a href="#section1">메뉴1</a></li>
-        <li><a href="#section2">메뉴2</a></li>
-        <li><a href="#section3">메뉴3</a></li>
-        <li><a href="#section4">메뉴4</a></li>
-        <li><a href="#section5">메뉴5</a></li>
-        <li><a href="#section6">메뉴6</a></li>
-        <li><a href="#section7">메뉴7</a></li>
-        <li><a href="#section8">메뉴8</a></li>
-        <li><a href="#section9">메뉴9</a></li>
+        <li class="active">
+          <a href="section1"><span>메뉴1</span></a>
+        </li>
+        <li>
+          <a href="#section2"><span>메뉴2</span></a>
+        </li>
+        <li>
+          <a href="#section3"><span>메뉴3</span></a>
+        </li>
+        <li>
+          <a href="#section4"><span>메뉴4</span></a>
+        </li>
+        <li>
+          <a href="#section5"><span>메뉴5</span></a>
+        </li>
+        <li>
+          <a href="#section6"><span>메뉴6</span></a>
+        </li>
+        <li>
+          <a href="#section7"><span>메뉴7</span></a>
+        </li>
+        <li>
+          <a href="#section8"><span>메뉴8</span></a>
+        </li>
+        <li>
+          <a href="#section9"><span>메뉴9</span></a>
+        </li>
       </ul>
     </nav>
 
@@ -316,7 +396,7 @@
           <figure class="content__item__imgWrap">
             <div class="content__item__img"></div>
           </figure>
-          <p class="content__item__desc">당신이 믿는 대로 될것이다.</p>
+          <p class="content__item__desc">당신이 믿는 대로 될 것이다.</p>
         </section>
         <!-- //section7 -->
 
@@ -349,19 +429,6 @@
 
     <aside id="parallax__info">
       <div class="scroll">scrollTop : <span>0</span>px</div>
-      <div class="info">
-        <ul>
-          <li>#section1 offset() : <span class="offset1">0</span>px</li>
-          <li>#section2 offset() : <span class="offset2">0</span>px</li>
-          <li>#section3 offset() : <span class="offset3">0</span>px</li>
-          <li>#section4 offset() : <span class="offset4">0</span>px</li>
-          <li>#section5 offset() : <span class="offset5">0</span>px</li>
-          <li>#section6 offset() : <span class="offset6">0</span>px</li>
-          <li>#section7 offset() : <span class="offset7">0</span>px</li>
-          <li>#section8 offset() : <span class="offset8">0</span>px</li>
-          <li>#section9 offset() : <span class="offset9">0</span>px</li>
-        </ul>
-      </div>
     </aside>
 
     <footer id="footer">
@@ -1001,34 +1068,61 @@ document.querySelectorAll("#parallax__nav li a").forEach(li =&gt; {
 
     <script src="../assets/js/highlight.min.js"></script>
     <script src="../assets/js/common.js"></script>
+
     <script>
-      document.querySelector("#parallax__dot a").forEach((el) => {
+      //버튼 클릭했을때 이동
+      document.querySelectorAll("#parallax__dot a").forEach((el) => {
         el.addEventListener("click", (e) => {
+          // el.addEventListener("click", e => {
           e.preventDefault();
+          // e.preventDefault(); 클릭했을때 상단으로 넘어가는 것을 막아줌
           // window.scroll(0. 1000);
           // window.scroll({left:0 top:2000});
           // window.scroll({left:0 top:2000, behavior:"smooth"});
 
           document
             .querySelector(el.getAttribute("href"))
-            .scrollInterView({ behavier: "smooth" });
+            .scrollIntoView({ behavior: "smooth" });
         });
       });
+
       window.addEventListener("scroll", () => {
         let scrollTop =
           window.pageYOffset ||
           window.scrollY ||
           document.documentElement.scrollTop;
+        //info
         document.querySelector("#parallax__info span").innerHTML =
           Math.floor(scrollTop);
-        document.querySelectorAll(".cotent__item").forEach((e, i) => {
-          if (scrollTop >= e.offsetTop - window.innerHeight / 2) {
-            document.querySelectorAll("#parallex__dot li").forEach((li) => {
+
+        // if(scrollTop >= document.getElementById("section1").offsetTop){
+        //   document.querySelectorAll("#parallex__dot li").forEach(el=>{
+        //     el.classList.remove("active");
+        //   })
+        //   document.querySelector("#parallex__dot li:nth-child(1)").classList.add("active")
+        // }
+        //for문
+        // for (let i = 1; 1 <= 9; i++) {
+        //   if (scrollTop >= document.getElementById("section1" + i).offsetTop) {
+        //     document.querySelectorAll("#parallex__dot li").forEach((el) => {
+        //       el.classList.remove("active");
+        //     });
+        //     document
+        //       .querySelector("#parallex__dot li:nth-child(" + i + ")")
+        //       .classList.add("active");
+        //   }
+        // }
+
+        //forEach
+        document.querySelectorAll(".content__item").forEach((el, i) => {
+          if (scrollTop >= el.offsetTop - window.innerHeight / 2) {
+            document.querySelectorAll("#parallax__dot li").forEach((li) => {
               li.classList.remove("active");
             });
-            document.querySelector(
-              "#parallax__dot li:nth-child(" + (i + 1) + ")"
-            ).classList.add;
+
+            document
+              .querySelector("#parallax__dot li:nth-child(" + (i + 1) + ")")
+              .classList.add("active");
           }
         });
       });
