--- a/sql/index.html
+++ b/sql/index.html
@@ -477,11 +477,64 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+--------------------------+---------+---------+----------+--------+----------+---------+
 8 rows in set (0.00 sec)
 </code></pre>
+            <h4 class="pt20">ex2-3) 이름중에 '김'으로 시작하는 멤버 출력</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '김%';
+
+</code></pre>
+            <h4 class="pt20">
+              ex2-3) 이름중에 '김'씨 이거나 '황'씨인 경우 멤버 출력
+            </h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '김%' OR youName LIKE '황%';
+
+</code></pre>
+            <h4 class="pt20">ex2-3) 이름중에 '상'이 있는 멤버 출력</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '_상_';
+
+</code></pre>
+            <h4 class="pt20">ex2-3) 이름중에 데이터가 없는 경우 멤버 출력</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName IS NULL;
+  mysql> SELECT * FROM member WHERE youName IS NOT NULL;
+</code></pre>
+            <h4 class="pt20">
+              ex2-3) 이름중에 나이가 18살이상이면서 김씨인 멤버 출력
+            </h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youAge >=18 AND youName LIKE '김__';
+
+</code></pre>
+            <h4 class="pt20">
+              ex2-3) 이름중에 나이가 18살이상이거나 김씨인 멤버 출력
+            </h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE youAge >=18 OR youName LIKE '김__';
+
+</code></pre>
+            <h4 class="pt20">
+              ex2-3) 이름중에 나이가 20살 이상이면서 아이디가 2 또는 10이상인
+              멤버 출력
+            </h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member WHERE (myMemberID = 2 OR myMemberID = 10 ) youAge >=20;
+
+</code></pre>
+            <h4 class="pt20">ex2-3)회원 데이터 5개만 불러오기(1~5)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5;
+
+</code></pre>
+            <h4 class="pt20">ex2-3)회원 데이터 5개만 불러오기(6~10)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
+
+</code></pre>
+            <h4 class="pt20">ex2-3)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
+
+</code></pre>
+            <h4 class="pt20">ex2-3)</h4>
+            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
+
+</code></pre>
             <h3 id="intro6-3" class="page-header">데이터 수정하기</h3>
             <div class="bs-callout bs-callout-info">
               UPDATE 테이블명(필드명) SET 컬럼명 조건
             </div>
-            <h4 class="pt20">모든 회원의 연락처 변경</h4>
+            <h4 class="pt20">모든 회원의 핸드폰번호 변경</h4>
             <pre><code class="language-js">UPDATE member SET youPhone = "010-0000-0000";
 +------------+--------------------------+---------+---------+----------+--------+---------------+---------+
 | myMemberID | youEmail                 | youName | youPass | youBirth | youAge | youPhone      | regTime |
@@ -506,6 +559,35 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 |         18 | praise1109@gmail.com     | 이하은  | 1234    | 19990303 |     20 | 010-0000-0000 | 1234567 |
 +------------+--------------------------+---------+---------+----------+--------+---------------+---------+
 18 rows in set (0.00 sec)
+</code></pre>
+            <h4 class="pt20">아이디가 3번인 회원의 비밀번호를 '123456'</h4>
+            <pre><code class="language-js">UPDATE member SET youPass = "123456" WHERE myMemberID = 3;
+
+</code></pre>
+            <h4 class="pt20">
+              아이디가 3번인 회원의 비밀번호를 '123456'로 변경
+            </h4>
+            <pre><code class="language-js">UPDATE member SET youPass = "123456" WHERE myMemberID = 3;
+
+</code></pre>
+            <h4 class="pt20">
+              아이디가 5~10번인 회원의 비밀번호를 '1234567'로 변경
+            </h4>
+            <pre><code class="language-js">UPDATE member SET youPass = "1234567" WHERE myMemberID BETWEEN 5 AND 10;
+
+</code></pre>
+            <h4 class="pt20">
+              비밀번호를 '1234567'로 변경하고 내림차순으로 10개만 변경
+            </h4>
+            <pre><code class="language-js">UPDATE member SET youPass = "1234567" ORDER BY DESC; 확인
+
+</code></pre>
+
+            <h4 class="pt20">
+              아이디가 5~10번인 회원의 비밀번호를 '1234567'로 변경
+            </h4>
+            <pre><code class="language-js">UPDATE member SET youPass = "0123" WHERE myMemberID BETWEEN 5 AND 10;
+
 </code></pre>
             <h3 id="intro6-4" class="page-header">데이터 삭제하기</h3>
             <div class="bs-callout bs-callout-info">create 테이블 이름;</div>
@@ -603,6 +685,52 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 </code></pre>
           </div>
           <!-- //intro7 -->
+
+          <div class="bs-docs-section">
+            <h2 id="intro8" class="page-header"></h2>
+            <h3 id="intro8-1" class="page-header"></h3>
+            <div class="bs-callout bs-callout-info"></div>
+            <pre><code class="language-js">create table myMember (
+    myMemberID int(10) unsigned auto_increment,
+    youEmail varchar(40) NOT NULL,
+    youName varchar(20) NOT NULL,
+    youPass varchar(20) NOT NULL,
+    youBirth int(20) NOT NULL,
+    youAge int(5) NOT NULL,
+    youPhone varchar(20) NOT NULL,
+    regTime int(20) NOT NULL,
+    PRIMARY KEY (myMemberID)
+) charset=utf8;
+
+create table myReview (
+    myReviewID int(10) unsigned auto_increment,
+    myMemberID int(10) unsigned,
+    youText tinytext NOT NULL,
+    regTime int(20) NOT NULL,
+    PRIMARY KEY (myReviewID)
+) charset=utf8;
+
+INSERT INTO mymember(myMemberID, youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('1', 'to_before@naver.com', '김상준', '1234', '19940404','20','01099991111','1234567');
+INSERT INTO mymember(myMemberID, youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('3', 'webstoryboy@naver.com','황상연','1234','19990303','20' ,'01099991111','1234567');
+INSERT INTO mymember(myMemberID, youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('2', 'thdtjdgml415@naver.com', '송성희', '1234', '19970415','20' ,'01099991111','1234567');
+INSERT INTO mymember(myMemberID, youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('4', 'mo0647@naver.com', '김민정', '1234', '19970530','20' ,'01099991111','1234567');
+INSERT INTO mymember(myMemberID, youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('5', 'tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009','20' ,'01099991111','1234567');
+
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("1", "정말 감사합니다, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "음 별로, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("4", "와 대박, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("3", "장난 아니네요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("3", "이게 뭔, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "신고할게요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("1", "좋네요 너무, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("5", "꽤 괜찮은거 같아요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "고소할게요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("4", "변호사 선임했습니다, 너무 좋네요!!", "1234567");
+
+SELECT m.youName, m.youEmail, r.youText, r.regTime FROM myMember m JOIN myReview r ON (m.myMemberID = r.myMemberID) ORDER BY myReviewID DESC LIMIT 5;
+</code></pre>
+
+
         </div>
         <!-- //col-md-9 -->
         <div class="col-md-3">
@@ -647,7 +775,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
                   <li><a href="#intro7-3">필드 삭제하기</a></li>
                 </ul>
               </li>
-              <li><a href="#intro8">테이블 JOIN</a></li>
+              <li><a href="#intro8">테이블 합치기</a></li>
             </ul>
           </div>
         </div>
