--- a/site1/index2.html
+++ b/site1/index2.html
@@ -12,19 +12,19 @@
     <meta name="robots" content="all" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/fonts.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="assets/css/fonts02.css" />
+    <link rel="stylesheet" href="assets/css/reset02.css" />
+    <link rel="stylesheet" href="assets/css/common02.css" />
 
     <!-- CSS(섹션별) -->
-    <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/slider.css" />
-    <link rel="stylesheet" href="assets/css/card.css" />
-    <link rel="stylesheet" href="assets/css/image.css" />
-    <link rel="stylesheet" href="assets/css/text.css" />
-    <link rel="stylesheet" href="assets/css/imgText.css" />
-    <link rel="stylesheet" href="assets/css/banner.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/header02.css" />
+    <link rel="stylesheet" href="assets/css/slider02.css" />
+    <link rel="stylesheet" href="assets/css/card02.css" />
+    <link rel="stylesheet" href="assets/css/image02.css" />
+    <link rel="stylesheet" href="assets/css/text02.css" />
+    <link rel="stylesheet" href="assets/css/imgText02.css" />
+    <link rel="stylesheet" href="assets/css/banner02.css" />
+    <link rel="stylesheet" href="assets/css/footer02.css" />
 
     <!-- css -->
     <link rel="stylesheet" href="assets/css/swiper.css" />
@@ -48,25 +48,25 @@
     <header id="headerType" class="header__wrap nexon">
       <div class="header__inner">
         <div class="header__logo">
-          <a href="#">WEB<em>SITE</em></a>
+          <a href="#">MINIMALIST</a><em>SITE</em></a>
         </div>
         <nav class="header__menu">
           <ul>
-            <li><a href="#">헤더 영역</a></li>
-            <li><a href="#">슬라이드 영역</a></li>
-            <li><a href="#">배너 영역</a></li>
-            <li><a href="#">컨텐츠 영역</a></li>
-            <li><a href="#">푸터 영역</a></li>
+            <li><a href="#">미니멀리즘</a></li>
+            <li><a href="#">미니멀라이프</a></li>
+            <li><a href="#">미니멀룩</a></li>
+            <li><a href="#">미니멀하우스</a></li>
+            <li><a href="#">미니멀아트 & 디자인</a></li>
           </ul>
         </nav>
         <div class="header__member">
-          <a href="#">로그인</a>
+          <a href="#"></a>
         </div>
         <div class="header__ham">
           <span></span>
           <span></span>
           <span></span>
-        </div>
+        </div> 
       </div>
     </header>
     <!-- //headerType -->
