--- a/site1/index.html
+++ b/site1/index.html
@@ -52,15 +52,15 @@
     <header id="headerType" class="header__wrap nexon">
       <div class="header__inner">
         <div class="header__logo">
-          <a href="#">WEB<em>SITE</em></a>
+          <a href="#">WEB<em>gallery</em></a>
         </div>
         <nav class="header__menu">
           <ul>
-            <li><a href="#">헤더 영역</a></li>
-            <li><a href="#">슬라이드 영역</a></li>
-            <li><a href="#">배너 영역</a></li>
-            <li><a href="#">컨텐츠 영역</a></li>
-            <li><a href="#">푸터 영역</a></li>
+            <li><a href="#">포트폴리오</a></li>
+            <li><a href="#">아트매거진</a></li>
+            <li><a href="#">아티스트</a></li>
+            <li><a href="#">작품이야기</a></li>
+            <li><a href="#">미술관나들이</a></li>
           </ul>
         </nav>
         <div class="header__member">
@@ -76,27 +76,39 @@
     <!-- //headerType -->
 
     <main id="mainType">
-      <section id="sliderType" class="slider__wrap">
-        <h2 class="blind">슬라이드</h2>
+      <section id="sliderType" class="slider__wrap content__item">
+        <h2 class="blind">슬라이드 영역</h2>
         <div class="slider__inner">
-          <!-- <div class ="slider__inner" -->
-          <!-- <img class="slider__img" src="assets/img/slider_bg01.jpg" alt="">
-            <div class="slider__arrow">
-                 <a href="#" class=""><span>이전이미지</span></href>
-                    <a href="#"><span>다음이미지</span></href>
+          <div class="slider">
+            <div class="slider__img">
+              <div class="desc">
+                <span>dfshsd</span>
+                <h3>vfdsgdfdfshfds</h3>
+                <p>
+                  fdhfdshsdfhsdghsdgjhsgjsf<br />
+                  gdshsdghsdgj
+                </p>
+                <div class="btn">
+                  <a href="#">자세히 보기</a>
+                  <a href="#" class="black">사이트 보기</a>
+                </div>
+              </div>
             </div>
-        <div class="slider__dot">
-        
-
-        </div> -->
-
-          <div class="swiper-pagination"></div>
-
-          ??????
+            <div class="slider__arrow">
+              <a href="#" class="left"><span class="ir">이전 이미지</span></a>
+              <a href="#" class="right"><span class="ir">다음 이미지</span></a>
+            </div>
+            <div class="slider__dot">
+              <a href="#" class="dot active"><span class="ir">1</span></a>
+              <a href="#" class="dot"><span class="ir">2</span></a>
+              <a href="#" class="dot"><span class="ir">3</span></a>
+              <a href="#" class="play"><span class="ir">플레이</span></a>
+              <a href="#" class="stop"><span class="ir">정지</span></a>
+            </div>
+          </div>
         </div>
       </section>
       <!-- //sliderType -->
-
       <section id="imageType" class="image__wrap nexon section">
         <h2>포트폴리오 구경하기</h2>
         <p>국내 현대미술 작가들의 포트폴리오 공간입니다.</p>
@@ -125,8 +137,32 @@
       </section>
       <!-- //imageType -->
 
-      <section id="imgTextType" class="imgText__wrap nexon section gray">
-        <h2>이미지텍스트</h2>
+      <section
+        id="imgTextType"
+        class="type imgText__wrap nexon section gray content__item"
+      >
+        <h2 class="blind">유용한 사이트 살펴보기</h2>
+        <div class="imgText__inner container">
+          <div class="imgText__txt">
+            <span>좀 더 가깝게...</span>
+            <h3>아트 매거진 <br />추천 사이트</h3>
+            <p>생활 속에서 늘 함께 하세요.</p>
+            <ul>
+              <li><a href="/">퍼블릭아트 사이트</a></li>
+              <li><a href="/">아트마인 사이트</a></li>
+              <li><a href="/">월간미술 사이트</a></li>
+              <li><a href="/">아트인컬처 사이트</a></li>
+              <li><a href="/">퍼블릭갤러리 사이트</a></li>
+              <li><a href="/">Frieze 사이트</a></li>
+            </ul>
+          </div>
+          <div class="imgText__img img1">
+            <a href="/">퍼블릭아트 사이트</a>
+          </div>
+          <div class="imgText__img img2">
+            <a href="/" class="blue">아트마인 사이트</a>
+          </div>
+        </div>
       </section>
       <!-- //imgTextType -->
 
@@ -228,12 +264,18 @@
       </section>
       <!-- //cardType -->
 
-      <section id="bannerType" class="banner__wrap nexon">
-        <h2 class="blind">배너</h2>
+      <section
+        id="bannerType"
+        class="type banner__wrap nexon section content__item"
+      >
+        <h2 class="blind">배너 영역</h2>
         <div class="banner__inner">
-          <h3>pale</h3>
-
-          <p></p>
+          <h3 class="title">유튜브 웹갤러리</h3>
+          <p class="desc">
+            더 다양한 작품설명을 유튜브를 통해 제공하고 있습니다.
+            <a href="#" title="블로그로 이동">https://google.co.kr/</a>
+          </p>
+          <span class="small">클릭하세요!</span>
         </div>
       </section>
       <!-- //bannerType -->
