--- a/site1/index2.html
+++ b/site1/index2.html
@@ -70,5 +70,40 @@
       </div>
     </header>
     <!-- //headerType -->
+    
+    <main id="mainType">
+        <section id="sliderType" class="slider__wrap content__item">
+            <h2 class="blind">슬라이드 영역</h2>
+            <div class="slider__inner">
+                <div class="slider">
+                    <div class="slider__img">
+                        <div class="desc">
+                            <span>dfshsd</span>
+                            <h3>vfdsgdfdfshfds</h3>
+                            <p>
+                                fdhfdshsdfhsdghsdgjhsgjsf<br>
+                              gdshsdghsdgj
+                            </p>
+                            <div class="btn">
+                                <a href="#">자세히 보기</a>
+                                <a href="#" class="black">사이트 보기</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__arrow">
+                        <a href="#" class="left"><span class="ir">이전 이미지</span></a>
+                        <a href="#" class="right"><span class="ir">다음 이미지</span></a>
+                    </div>
+                    <div class="slider__dot">
+                        <a href="#" class="dot active"><span class="ir">1</span></a>
+                        <a href="#" class="dot"><span class="ir">2</span></a>
+                        <a href="#" class="dot"><span class="ir">3</span></a>
+                        <a href="#" class="play"><span class="ir">플레이</span></a>
+                        <a href="#" class="stop"><span class="ir">정지</span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //sliderType -->
   </body>
 </html>
