--- a/site1/index.html
+++ b/site1/index.html
@@ -273,7 +273,9 @@
           <h3 class="title">유튜브 웹갤러리</h3>
           <p class="desc">
             더 다양한 작품설명을 유튜브를 통해 제공하고 있습니다.
-            <a href="#" title="블로그로 이동">https://google.co.kr/</a>
+            <a href="#" title="블로그로 이동"
+              >https://google.co.kr/webgallery</a
+            >
           </p>
           <span class="small">클릭하세요!</span>
         </div>
