--- a/sql/index.html
+++ b/sql/index.html
@@ -271,9 +271,9 @@ Query OK, 0 rows affected (0.01 sec)
 </code></pre>
             <h3 id="intro5-5" class="page-header">테이블 복사하기</h3>
             <div class="bs-callout bs-callout-info">
-              create database 데이터베이스 이름;
+              CREATE TABLE 새로운 테이블명 SELECT * FROM 복사할 테이블 명;
             </div>
-            <pre><code class="language-js">
+            <pre><code class="language-js">CREATE TABLE member3 SELECT * FROM member;
     
 </code></pre>
           </div>
@@ -334,7 +334,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+--------------------------+---------+---------+----------+--------+----------+-----------+---------+
 18 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">ex1-1) myMemberID가 6번인 경우</h4>
+            <h4 class="pt20">myMemberID가 6번인 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID = 6;
 +------------+---------------------+---------+---------+----------+---------+
 | myMemberID | youEmail            | youName | youPass | youBirth | regTime |
@@ -343,7 +343,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+---------------------+---------+---------+----------+---------+
 1 row in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">ex1-2) myMemberID가 6번이 아닌 경우</h4>
+            <h4 class="pt20">myMemberID가 6번이 아닌 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID &lt;&gt; 6
 +------------+--------------------------+---------+---------+----------+--------+----------+---------+
 | myMemberID | youEmail                 | youName | youPass | youBirth | youAge | youPhone | regTime |
@@ -368,7 +368,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+--------------------------+---------+---------+----------+--------+----------+---------+
 17 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">ex1-3) myMemberID가 5~10번인 경우</h4>
+            <h4 class="pt20">myMemberID가 5~10번인 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID &gt;=5 AND myMemberID &lt;=10;
 +------------+---------------------+---------+---------+----------+--------+----------+---------+
 | myMemberID | youEmail            | youName | youPass | youBirth | youAge | youPhone | regTime |
@@ -382,7 +382,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+---------------------+---------+---------+----------+--------+----------+---------+
 6 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">ex1-4) myMemberID가 5~10번인 경우(범위 조건)</h4>
+            <h4 class="pt20">myMemberID가 5~10번인 경우(범위 조건)</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID BETWEEN 5 AND 10;
 +------------+---------------------+---------+---------+----------+--------+----------+---------+
 | myMemberID | youEmail            | youName | youPass | youBirth | youAge | youPhone | regTime |
@@ -396,9 +396,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+---------------------+---------+---------+----------+--------+----------+---------+
 6 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">
-              ex1-5) myMemberID가 5~10번이 아닌 경우(범위 조건)
-            </h4>
+            <h4 class="pt20">myMemberID가 5~10번이 아닌 경우(범위 조건)</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID NOT BETWEEN 5 AND 10;
 +------------+--------------------------+---------+---------+----------+--------+----------+---------+
 | myMemberID | youEmail                 | youName | youPass | youBirth | youAge | youPhone | regTime |
@@ -418,7 +416,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+--------------------------+---------+---------+----------+--------+----------+---------+
 12 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">ex1-6) 특정 myMemberID에 해당하는 경우</h4>
+            <h4 class="pt20">특정 myMemberID에 해당하는 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID IN(1, 4, 10, 14);
 +------------+-----------------------+---------+---------+----------+--------+----------+---------+
 | myMemberID | youEmail              | youName | youPass | youBirth | youAge | youPhone | regTime |
@@ -430,106 +428,65 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+-----------------------+---------+---------+----------+--------+----------+---------+
 4 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">
-              ex2-1) Email에 'naver'텍스트를 포함하고 있는 경우
-            </h4>
+            <h4 class="pt20">Email에 'naver'텍스트를 포함하고 있는 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
-+------------+------------------------+---------+---------+----------+---------+
-| myMemberID | youEmail               | youName | youPass | youBirth | regTime |
-+------------+------------------------+---------+---------+----------+---------+
-|          1 | mo0647@naver.com       | 김민정  | 1234    | 19970530 | 1234567 |
-|          2 | thdtjdgml415@naver.com | 송성희  | 1234    | 19970415 | 1234567 |
-|          3 | tjrwnsrkdtj@naver.com  | 김석준  | 1234    | 19941009 | 1234567 |
-|          4 | jwor124@naver.com      | 정은비  | 1234    | 19990303 | 1234567 |
-|          5 | sshin4882@naver.com    | 박현신  | 1234    | 19990303 | 1234567 |
-|          6 | to_before@naver.com    | 김상준  | 1234    | 19970809 |       4 |
-|          7 | kkb7528@naver.com      | 권규비  | 1234    | 19990303 | 1234567 |
-|         10 | eodnjs9605@naver.com   | 김대원  | 1234    | 19960530 | 1234567 |
-|         17 | oranssy@naver.com      | 최진주  | 3950    | 20010415 | 1234567 |
-|         18 | webstoryboy@naver.com  | 황상연  | 1234    | 19990303 | 1234567 |
-+------------+------------------------+---------+---------+----------+---------+
-10 rows in set (0.00 sec)
+
 </code></pre>
-            <h4 class="pt20">ex2-2) Email이 'web' 텍스트로 시작하는 경우</h4>
+            <h4 class="pt20">Email이 'web' 텍스트로 시작하는 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE 'web%';
-+------------+-----------------------+---------+---------+----------+--------+----------+---------+
-| myMemberID | youEmail              | youName | youPass | youBirth | youAge | youPhone | regTime |
-+------------+-----------------------+---------+---------+----------+--------+----------+---------+
-|          1 | webstoryboy@naver.com | 황상연  | 1234    | 19990303 |     20 |        0 | 1234567 |
-+------------+-----------------------+---------+---------+----------+--------+----------+---------+
-1 row in set (0.00 sec)
+
 </code></pre>
-            <h4 class="pt20">
-              ex2-3) Email이 'gmail.com' 텍스트로 끝나는 경우
-            </h4>
+            <h4 class="pt20">Email이 'gmail.com' 텍스트로 끝나는 경우</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%gmail.com';
-+------------+--------------------------+---------+---------+----------+--------+----------+---------+
-| myMemberID | youEmail                 | youName | youPass | youBirth | youAge | youPhone | regTime |
-+------------+--------------------------+---------+---------+----------+--------+----------+---------+
-|         10 | piowm123@gmail.com       | 문병내  | 1234    | 19990303 |     20 |        0 | 1234567 |
-|         11 | ghkddbwls96@gmail.com    | 황유진  | 1234    | 19990303 |     20 |        0 | 1234567 |
-|         13 | wjsqhdus971007@gmail.com | 전보연  | 1234    | 19971007 |     20 |        0 | 1234567 |
-|         14 | noeyheyh@gmail.com       | 권혜현  | 1234    | 19960331 |     20 |        0 | 1234567 |
-|         15 | hjkang306@gmail.com      | 강현지  | 1234    | 19990303 |     20 |        0 | 1234567 |
-|         16 | sunhey9810@gmail.com     | 박선혜  | 1234    | 19981010 |     20 |        0 | 1234567 |
-|         17 | kde66034@gmail.com       | 김동언  | 1234    | 19700101 |     20 |        0 | 1234567 |
-|         18 | praise1109@gmail.com     | 이하은  | 1234    | 19990303 |     20 |        0 | 1234567 |
-+------------+--------------------------+---------+---------+----------+--------+----------+---------+
-8 rows in set (0.00 sec)
+
 </code></pre>
-            <h4 class="pt20">ex2-3) 이름중에 '김'으로 시작하는 멤버 출력</h4>
+            <h4 class="pt20">이름중에 '김'으로 시작하는 멤버 출력</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '김%';
 
 </code></pre>
-            <h4 class="pt20">
-              ex2-3) 이름중에 '김'씨 이거나 '황'씨인 경우 멤버 출력
-            </h4>
+            <h4 class="pt20">이름중에 '김'씨 이거나 '황'씨인 경우 멤버 출력</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '김%' OR youName LIKE '황%';
 
 </code></pre>
-            <h4 class="pt20">ex2-3) 이름중에 '상'이 있는 멤버 출력</h4>
+            <h4 class="pt20">이름중에 '상'이 있는 멤버 출력</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName LIKE '_상_';
 
 </code></pre>
-            <h4 class="pt20">ex2-3) 이름중에 데이터가 없는 경우 멤버 출력</h4>
+            <h4 class="pt20">이름중에 데이터가 없는 경우 멤버 출력</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youName IS NULL;
   mysql> SELECT * FROM member WHERE youName IS NOT NULL;
 </code></pre>
             <h4 class="pt20">
-              ex2-3) 이름중에 나이가 18살이상이면서 김씨인 멤버 출력
+              멤버중에 나이가 18살이상이면서 김씨인 멤버 출력
             </h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youAge >=18 AND youName LIKE '김__';
 
 </code></pre>
             <h4 class="pt20">
-              ex2-3) 이름중에 나이가 18살이상이거나 김씨인 멤버 출력
+              멤버중에 나이가 18살이상이거나 김씨인 멤버 출력
             </h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE youAge >=18 OR youName LIKE '김__';
 
 </code></pre>
             <h4 class="pt20">
-              ex2-3) 이름중에 나이가 20살 이상이면서 아이디가 2 또는 10이상인
-              멤버 출력
+              멤버중에 나이가 20살 이상이면서 아이디가 2 또는 10인 멤버 출력
             </h4>
             <pre><code class="language-js">mysql> SELECT * FROM member WHERE (myMemberID = 2 OR myMemberID = 10 ) youAge >=20;
 
 </code></pre>
-            <h4 class="pt20">ex2-3)회원 데이터 5개만 불러오기(1~5)</h4>
+            <h4 class="pt20">회원 데이터 멤버 5개만 불러오기(1~5)</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5;
 
 </code></pre>
-            <h4 class="pt20">ex2-3)회원 데이터 5개만 불러오기(6~10)</h4>
+            <h4 class="pt20">회원 데이터 멤버 5개만 불러오기(6~10)</h4>
             <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
 
 </code></pre>
-            <h4 class="pt20">ex2-3)</h4>
-            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
+            <h4 class="pt20">회원 이메일을 기준으로 5개만 불러오기(1~5)</h4>
+            <pre><code class="language-js">mysql> SELECT youEmail FROM member LIMIT 5;
 
 </code></pre>
-            <h4 class="pt20">ex2-3)</h4>
-            <pre><code class="language-js">mysql> SELECT * FROM member LIMIT 5, 5;
 
-</code></pre>
             <h3 id="intro6-3" class="page-header">데이터 수정하기</h3>
             <div class="bs-callout bs-callout-info">
               UPDATE 테이블명(필드명) SET 컬럼명 조건
@@ -560,43 +517,41 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
 +------------+--------------------------+---------+---------+----------+--------+---------------+---------+
 18 rows in set (0.00 sec)
 </code></pre>
-            <h4 class="pt20">아이디가 3번인 회원의 비밀번호를 '123456'</h4>
-            <pre><code class="language-js">UPDATE member SET youPass = "123456" WHERE myMemberID = 3;
 
-</code></pre>
-            <h4 class="pt20">
-              아이디가 3번인 회원의 비밀번호를 '123456'로 변경
-            </h4>
-            <pre><code class="language-js">UPDATE member SET youPass = "123456" WHERE myMemberID = 3;
+            <h4 class="pt20">아이디가 3번인 회원의 비밀번호를 '0123'로 변경</h4>
+            <pre><code class="language-js">UPDATE member SET youPass = '0123' WHERE myMemberID = 3;
 
 </code></pre>
             <h4 class="pt20">
               아이디가 5~10번인 회원의 비밀번호를 '1234567'로 변경
             </h4>
-            <pre><code class="language-js">UPDATE member SET youPass = "1234567" WHERE myMemberID BETWEEN 5 AND 10;
+            <pre><code class="language-js">UPDATE member SET youPass = '1234567' WHERE myMemberID BETWEEN 5 AND 10;
 
 </code></pre>
             <h4 class="pt20">
               비밀번호를 '1234567'로 변경하고 내림차순으로 10개만 변경
             </h4>
-            <pre><code class="language-js">UPDATE member SET youPass = "1234567" ORDER BY DESC; 확인
-
-</code></pre>
-
-            <h4 class="pt20">
-              아이디가 5~10번인 회원의 비밀번호를 '1234567'로 변경
-            </h4>
-            <pre><code class="language-js">UPDATE member SET youPass = "0123" WHERE myMemberID BETWEEN 5 AND 10;
+            <pre><code class="language-js">UPDATE member SET youPass = ‘1234567’ ORDER BY youPass DESC LIMIT 10;
 
 </code></pre>
             <h3 id="intro6-4" class="page-header">데이터 삭제하기</h3>
-            <div class="bs-callout bs-callout-info">create 테이블 이름;</div>
-            <pre><code class="language-js">
-
+            <div class="bs-callout bs-callout-info">
+              DELETE FROM 테이블명 조건
+            </div>
+            <h4>회원 아이디가 5번인 멤버 삭제</h4>
+            <pre><code class="language-js">DELETE FROM member WHERE myMemberID = 5;
+</code></pre>
+            <h4>회원 비밀번호가 '1234'인 멤버 삭제</h4>
+            <pre><code class="language-js">DELETE FROM member WHERE youPass = '1234';
+</code></pre>
+            <h4>회원 이름을 기준으로 5번째까지 멤버 삭제</h4>
+            <pre><code class="language-js">DELETE FROM member ORDER BY youName LIMIT 5;
+</code></pre>
+            <h4>지정한 멤버 삭제</h4>
+            <pre><code class="language-js">DELETE FROM member WHERE myMemberID IN(7,9,10);
 </code></pre>
           </div>
           <!-- //intro6 -->
-
           <div class="bs-docs-section">
             <h2 id="intro7" class="page-header">테이블 수정</h2>
             <h3 id="intro7-1" class="page-header">필드 추가하기</h3>
@@ -687,9 +642,12 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, regTime) VALUES
           <!-- //intro7 -->
 
           <div class="bs-docs-section">
-            <h2 id="intro8" class="page-header"></h2>
-            <h3 id="intro8-1" class="page-header"></h3>
-            <div class="bs-callout bs-callout-info"></div>
+            <h2 id="intro8" class="page-header">테이블 합치기</h2>
+            <h3 id="intro8-1" class="page-header">테이블 JOIN</h3>
+            <div class="bs-callout bs-callout-info">
+              SELECT 필드명 FROM 테이블 명 앨리어스 JOIN 연결할 테이블명
+              앨리어스 ON(조건문)
+            </div>
             <pre><code class="language-js">create table myMember (
     myMemberID int(10) unsigned auto_increment,
     youEmail varchar(40) NOT NULL,
@@ -729,8 +687,8 @@ INSERT INTO myReview(myMemberID, youText, regTime) VALUES("4", "변호사 선임
 
 SELECT m.youName, m.youEmail, r.youText, r.regTime FROM myMember m JOIN myReview r ON (m.myMemberID = r.myMemberID) ORDER BY myReviewID DESC LIMIT 5;
 </code></pre>
-
-
+          </div>
+          <!-- //intro8 -->
         </div>
         <!-- //col-md-9 -->
         <div class="col-md-3">
@@ -779,6 +737,7 @@ SELECT m.youName, m.youEmail, r.youText, r.regTime FROM myMember m JOIN myReview
             </ul>
           </div>
         </div>
+        <!-- //col-md-3 -->
       </div>
       <!-- //row -->
     </div>
