--- a/site1/index2.html
+++ b/site1/index2.html
@@ -62,7 +62,7 @@
         <div class="header__member">
           <a href="#"></a>
         </div>
-        <div class="header__ham">
+        <div class="header__ham">        
           <span></span>
           <span></span>
           <span></span>
@@ -78,15 +78,16 @@
                 <div class="slider">
                     <div class="slider__img">
                         <div class="desc">
-                            <span>dfshsd</span>
-                            <h3>vfdsgdfdfshfds</h3>
+                            <span></span>
+                            <h3>minimalism<br>
+                              lifestyle</h3>
                             <p>
-                                fdhfdshsdfhsdghsdgjhsgjsf<br>
-                              gdshsdghsdgj
+                              MINIMALIST<br>
+                              What Is<br> 
+                              a Minimalist Lifestyle?<br>
                             </p>
                             <div class="btn">
-                                <a href="#">자세히 보기</a>
-                                <a href="#" class="black">사이트 보기</a>
+                                <a href="#">더 알아보기</a>
                             </div>
                         </div>
                     </div>
@@ -98,8 +99,8 @@
                         <a href="#" class="dot active"><span class="ir">1</span></a>
                         <a href="#" class="dot"><span class="ir">2</span></a>
                         <a href="#" class="dot"><span class="ir">3</span></a>
-                        <a href="#" class="play"><span class="ir">플레이</span></a>
-                        <a href="#" class="stop"><span class="ir">정지</span></a>
+                        <a href="#" class="dot"><span class="ir">4</span></a>
+                        <a href="#" class="dot"><span class="ir">5</span></a>
                     </div>
                 </div>
             </div>
