--- a/javascript/effect/parallaxEffect.html
+++ b/javascript/effect/parallaxEffect.html
@@ -4,47 +4,87 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>패랠렉스 이펙트</title>
+    <title>자바스크립트 : 데이터 불러오기</title>
+
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <style>
-      body {
-        padding: 0;
-        width: 100%;
-        height: 100vh;
-        background: linear-gradient(
-          200deg,
-          rgba(93, 218, 207, 0.4),
-          rgba(64, 62, 131, 0.5),
-          rgba(255, 124, 244, 0.5)
-        );
-        color: #fff;
-      }
-
-      .intro_menu {
-        background: rgba(255, 255, 255, 0.1);
-      }
-
-      .intro_menu ul li {
-        color: #fff;
-      }
-
-      .intro_menu ul li a {
-        color: #fff;
-      }
-    </style>
+    <link rel="stylesheet" href="../assets/css/dracula.css" />
   </head>
 
   <body>
-    <main>
-      <div class="intro_menu white">
+    <header id="header">
+      <h1><a href="index.html">Javascript</a></h1>
+      <nav class="header_nav">
         <ul>
-          <li>
-            01. 패랠렉스 이펙트 :
-            <a href="parallaxEffect01.html">Go</a>
+          <li><a href="javascript01.html">데이터 저장하기</a></li>
+          <li class="active">
+            <a href="javascript02.html">데이터 불러오기</a>
           </li>
+          <li><a href="javascript03.html">데이터 실행하기</a></li>
+          <li><a href="javascript04.html">데이터 제어하기</a></li>
         </ul>
+        <ul>
+          <li><a href="javascript05.html">문자열 객체</a></li>
+          <li><a href="javascript06.html">배열 객체</a></li>
+          <li><a href="javascript07.html">수학 객체</a></li>
+          <li><a href="javascript08.html">숫자 객체</a></li>
+          <li><a href="javascript09.html">브라우저 객체</a></li>
+          <li><a href="javascript10.html">요소 객체</a></li>
+          <li><a href="javascript11.html">이벤트 객체</a></li>
+          <li><a href="javascript12.html">제이쿼리</a></li>
+        </ul>
+        <ul class="effect">
+          <li><a href="effect/searchEffect.html">검색효과</a></li>
+          <li><a href="effect/quizEffect.html">퀴즈효과</a></li>
+          <li><a href="effect/detaEffect.html">데이터 효과</a></li>
+          <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
+          <li><a href="effect/sliderEffect01.html">슬라이드효과</a></li>
+          <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
+          <li><a href="effect/gameEffect01.html">게임효과</a></li>
+        </ul>
+        <ul class="study">
+          <li><a href="study/basic.html">기본 규칙</a></li>
+          <li><a href="study/operator.html">연산자</a></li>
+          <li><a href="study/for.html">반복문</a></li>
+          <li><a href="study/if.html">조건문</a></li>
+          <li><a href="study/type.html">데이터타입</a></li>
+          <li><a href="study/function.html">함수</a></li>
+          <li><a href="study/var.html">지역변수/전역변수</a></li>
+          <li><a href="study/element.html">요소선택</a></li>
+          <li><a href="study/laytag.html">구조관련요소</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- //header -->
+
+    <main id="main">
+      <div class="container">
+        <div class="main_menu">
+          <ul>
+            <li>01. 패럴렉스 이펙트 : 메뉴 이동<a href="parallaxEffect01.html"> VIEW</a></li>
+                    <li>02. 패럴렉스 이펙트 : 사이드 메뉴<a href="parallaxEffect02.html"> VIEW</a></li>
+                    <li>03. 패럴렉스 이펙트 : 숨김 메뉴<a href="parallaxEffect03.html"> VIEW</a></li>
+                    <li>04. 패럴렉스 이펙트 : 나타나기<a href="parallaxEffect04.html"> VIEW</a></li>
+                    <li>05. 패럴렉스 이펙트 : 이질감 효과<a href="parallaxEffect05.html"> VIEW</a></li>
+          </ul>
+        </div>
+        <div class="main_sample">
+          <div id="sample01" class="sample">
+            <h3></h3>
+
+        </div>
       </div>
     </main>
-    <canvas id="webgl-canvas"></canvas>
+    <!-- //main -->
+
+    <footer id="footer">
+      <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
+    </footer>
+    <!-- //footer -->
+
+    <script src="../assets/js/highlight.min.js"></script>
+    <script>
+      hljs.highlightAll();
+    </script>
+    <script></script>
   </body>
 </html>
